--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
   <title>دهانات وديكورات الرياض|معلم دهانات وديكورات الرياض 966550852093
 |966574709693</title>
+ 
   <meta name="keywords" content="دهانات رياض,ديكورات الرياض رياض,معلم دهانات وديكورات الرياض,دهانات وديكورات منازل فلل شقق الرياض,المعلم الافضل للدهانات والديكورات في الرياض,شمال الرياض ,جنوب الرياض,احسن معلم دهانات وديكورات , معلم الرياض دهانات وديكورات,معلمين الرياض الدهانات والديكورات,افضل معلم احسن معلم دهانات ديكورات الرياض شمال جنوب الرياض,فن الديكورات والدهانات في الرياض,ديكورات جبسية,ظلل,كهرباء,دهانات الرياض,ديكور الرياض,دهان وديكور الرياض,الدهانات والديكورات بالرياض,">
   <meta name="author" content="الدهانات والديكورات بالرياض">
   <meta name="description" content="دهانات ديكورات الرياض ابو فهمي الدهانات والديكورات يقدم خدمات دهانات داخلية وخارجية عالية الجودة في الرياض. نقوم بتصميم ديكورات جبسية، ترميم الفلل، وخدمات دهانات متميزة للفلل والمنازل في البديعة، السويدي، نجم الدين، شفاء ولحزم.">
@@ -29,14 +30,14 @@
   <meta property="og:locale" content="ar_AR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="أفضل دهانات وديكورات في الرياض | أبو فهمي للدهانات والديكورات الداخلية والخارجية">
-  <meta property="og:description" content=" دهانات وديكورات الرياض , افضل معلم دهانات وديكورات الرياض الدهانات والديكورات يقدم خدمات دهانات داخلية وخارجية عالية الجودة في جميع مناطق الرياض، بما في ذلك الشمال، الجنوب، الشرق، والغرب. نحن متخصصون في تصميم ديكورات جبسية فاخرة، ترميم الفلل والمنازل، وخدمات دهانات متميزة للفلل والمنازل في مناطق مثل البديعة، السويدي، نجم الدين، شفاء، لحزم، الدائري الشمالي، الدائري الجنوبي، حي النزهة، العريجاء، والملز. اتصل بنا للحصول على أفضل خدمات دهانات وديكورات في الرياض عبر الأرقام: 0550852093 أو 0574709693.">
+  <meta property="og:description" content=" دهانات وديكورات الرياض , افضل معلم دهانات وديكورات الرياض الدهانات والديكورات يقدم خدمات دهانات داخلية وخارجية عالية الجودة في جميع مناطق الرياض، بما في ذلك الشمال، الجنوب، الشرق، والغرب. نحن متخصصون في تصميم ديكورات جبسية فاخرة، ترميم الفلل والمنازل، وخدمات دهانات متميزة للفلل والمنازل في مناطق مثل البديعة، السويدي، نجم الدين، شفاء، لحزم، الدائري الشمالي، الدائري الجنوبي، حي النزهة، العريجاء، والملز. اتصل بنا للحصول على أفضل خدمات دهانات وديكورات في الرياض عبر الأرقام:  966550852093 أو  966550852093">
   <meta property="og:url" content="https://dhandekorriyadh.netlify.app/">
   <meta property="og:site_name" content="أبو فهمي الدهانات والديكورات">
   <meta property="og:image" content="https://i.postimg.cc/dtDFqTGV/image.png">
   
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:description" content="دهانات وديكورات الرياض,افضل معلم دهانات وديكورات الؤياض ,المعلمين الافضل للدهانات والديكورات الرياض دهانات داخلية وخارجية عالية الجودة في الرياض. نحن متخصصون في ديكورات جبسية، ترميم فلل، وخدمات دهانات متميزة في جميع مناطق الرياض مثل البديعة، السويدي، نجم الدين، شفاء، لحزم. اتصل بنا الآن على 0550852093 أو 0574709693 للحصول على أفضل الخدمات.">
+  <meta name="twitter:description" content="دهانات وديكورات الرياض,افضل معلم دهانات وديكورات الؤياض ,المعلمين الافضل للدهانات والديكورات الرياض دهانات داخلية وخارجية عالية الجودة في الرياض. نحن متخصصون في ديكورات جبسية، ترميم فلل، وخدمات دهانات متميزة في جميع مناطق الرياض مثل البديعة، السويدي، نجم الدين، شفاء، لحزم. اتصل بنا الآن على  966550852093 أو  966550852093 للحصول على أفضل الخدمات.">
   <meta name="twitter:title" content="أفضل دهانات وديكورات في الرياض | أبو فهمي للدهانات والديكورات الداخلية والخارجية">
   <meta name="twitter:image" content="https://i.postimg.cc/dtDFqTGV/image.png">
   <!-- رابط الصورة المحدث هنا -->
@@ -60,9 +61,9 @@
   <meta name="copyright" content="جميع الحقوق محفوظة لموقع دهانات وديكورات الرياض | © 2025">
   
   <!-- Contact Information -->
-  <meta name="contact" content="رقم التواصل الأول: 0550852093, رقم التواصل الثاني: 0574709693">
+  <meta name="contact" content="رقم التواصل الأول: 966550852093, رقم التواصل الثاني: 0574709693">
 </head>
-<body>
+<body> 
 
   <div class="container text-center">
     <div class="profile-card">
@@ -73,21 +74,21 @@
 
       <div class="contact-info">
         <p>معلومات الاتصال:</p>
-        <p><strong>الهاتف:</strong> <a href="tel:+966574709693">+966574709693</a></p>
+        <p><strong>الهاتف:</strong> <a href="tel:+966550852093"> 966550852093</a></p>
         <p><strong>الموقع:</strong> <a href="https://maps.google.com/?q=الرياض-البديعة-السويدي">الرياض-البوادي-السويدي</a></p>
-        <p><strong>صفحتنا الالكترونية:</strong> <a href="https://dhandekorriyadh.netlify.app/">+https://dhandekorriyadh.netlify.app/</a></p>
+        <p><strong>صفحتنا الالكترونية:</strong> <a href="https://dhandekorriyadh.netlify.app/">https://dhandekorriyadh.netlify.app/</a></p>
 
       </div>
       </div>
       <!-- إضافة أيقونات التواصل -->
       <div class="social-icons">
-        <a href="https://wa.me/966574709693" target="_blank" title="التواصل عبر واتساب">
+        <a href="https://wa.me/966550852093" target="_blank" title="التواصل عبر واتساب">
           <i class="fab fa-whatsapp"></i>
         </a>
-        <a href="tel:+966574709693" title="اتصال الآن">
+        <a href="tel:+966550852093" title="اتصال الآن">
           <i class="fas fa-phone-alt"></i>
         </a>
-        <a href="sms:+966574709693" title="إرسال رسالة نصية">
+        <a href="sms:+966550852093" title="إرسال رسالة نصية">
           <i class="fas fa-sms"></i>
         </a>
       </div>
