--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
       <div class="contact-info">
         <p>معلومات الاتصال:</p>
         <p><strong>الهاتف:</strong> <a href="tel:+966550852093"> 966550852093</a></p>
-        <p><strong>الموقع:</strong> <a href="https://maps.google.com/?q=الرياض-البديعة-السويدي">الرياض-البوادي-السويدي</a></p>
-        <p><strong>صفحتنا الالكترونية:</strong> <a href="https://dhandekorriyadh.netlify.app/">https://dhandekorriyadh.netlify.app/</a></p>
+<p><strong>الموقع:</strong> 
+<p>هذا الموقع دهانت الرياض البديعه، ادخل المحدود، العريجا الغربي، العريجا الوسطاء، السويدي الشيفا، السويدي نجم، حي الموسى، حي لبن، حي المهديه، الدرعية.</p>
+<p>جميع أنحاء الرياض: مخرج 2، مخرج 5، مخرج 6.</p>
+ </p>
+       <p><strong>صفحتنا الالكترونية:</strong> <a href="https://dhandekorriyadh.netlify.app/">https://dhandekorriyadh.netlify.app/</a></p>
 
       </div>
       </div>
