--- a/index.html
+++ b/index.html
@@ -75,10 +75,30 @@
       <div class="contact-info">
         <p>معلومات الاتصال:</p>
         <p><strong>الهاتف:</strong> <a href="tel:+966550852093"> 966550852093</a></p>
-<p><strong>الموقع:</strong> 
-<p>هذا الموقع دهانت الرياض البديعه، ادخل المحدود، العريجا الغربي، العريجا الوسطاء، السويدي الشيفا، السويدي نجم، حي الموسى، حي لبن، حي المهديه، الدرعية.</p>
-<p>جميع أنحاء الرياض: مخرج 2، مخرج 5، مخرج 6.</p>
- </p>
+<p><strong>الموقع:</strong></p>
+
+<p>
+  هذا الموقع يشمل العديد من المناطق في الرياض مثل:
+</p>
+
+<ul>
+  <li>دهانت الرياض البديعة</li>
+  <li>ادخل المحدود</li>
+  <li>العريجا الغربي</li>
+  <li>العريجا الوسطاء</li>
+  <li>السويدي الشيفا</li>
+  <li>السويدي نجم</li>
+  <li>حي الموسى</li>
+  <li>حي لبن</li>
+  <li>حي المهديه</li>
+  <li>الدرعية</li>
+</ul>
+
+<p>
+  <strong>جميع أنحاء الرياض:</strong> 
+  مخرج 2، مخرج 5، مخرج 6.
+</p>
+
        <p><strong>صفحتنا الالكترونية:</strong> <a href="https://dhandekorriyadh.netlify.app/">https://dhandekorriyadh.netlify.app/</a></p>
 
       </div>
