--- a/index.html
+++ b/index.html
@@ -59,7 +59,23 @@
   
   <meta name="rating" content="General">
   <meta name="copyright" content="جميع الحقوق محفوظة لموقع دهانات وديكورات الرياض | © 2025">
-  
+   <!-- Structured Data for Contact Information (Schema Markup) -->
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "افضل معلم دهانات وديكورات الرياض ,ابو فهمي الدهانات والديكورات",
+    "url": "https://dhandekorryiad.netlify.app/",
+    "logo": "https://i.postimg.cc/X7h2PqXf/IMG-20250218-WA0042.jpg",
+    "contactPoint": [{
+      "@type": "ContactPoint",
+      "telephone": "966550852093",
+      "contactType": "customer service",
+      "areaServed": "SA",
+      "availableLanguage": "Arabic"
+    }]
+  }
+  </script>
   <!-- Contact Information -->
   <meta name="contact" content="رقم التواصل الأول: 966550852093, رقم التواصل الثاني: 0574709693">
 </head>
